Fix typo; corn > corned

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/corn-beef-sandwich.html">Corn Beef Sandwich</a>
-        
+        <a href="./recipes/corned-beef-sandwich.html">Corned Beef Sandwich</a>
+
     </body>
 </html>
