--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/corned-beef-sandwich.html">Corned Beef Sandwich</a>
+        <ul>
+            <li><a href="./recipes/corned-beef-sandwich.html">Corned Beef Sandwich</a></li>
+            <li><a href="./recipes/pizza.html">Homemade Pizza</a></li>
+        </ul>
+        
 
     </body>
 </html>
