--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/corned-beef-sandwich.html">Corned Beef Sandwich</a></li>
             <li><a href="./recipes/pizza.html">Homemade Pizza</a></li>
+            <li><a href="./recipes/mini-donuts.html">Mini Donuts</a></li>
         </ul>
         
 
